# framework.system.libsvi

./: AUTHORS  CMakeLists.txt
data/mobile/: sound.xml
data/wearable/: sound.xml  vibration.xml
include/: devices.h  feedback-ids.h  feedback.h  svi-file.h  svi-ids.h  svi.h
packaging/: libfeedback.spec  svi-data.manifest
src/: feedback.c  led.c  sound.c  str.c  svi.c  vibrator.c  xmlparser.c
